--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </div>
 <div class="row">
 <div class="col-sm-12 text-center">
-<a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?k=wG4FpLbziF1lKU5KfW4KOsFeBKe_6NBl">联系余生</a>
+<a target="_blank" href="http://wpa.qq.com/msgrd?v=3\&uin=5236856590\&site=qq\&menu=yes">联系余生</a>
 <br><br>
 </div>
 </div>
