--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>余生防封系统官网,余生防封一键搭建脚本,OpenVPN流量控制系统</title>
+<title>余生流控™官网,余生流控™一键搭建脚本,OpenVPN流量控制系统</title>
 <link href="css/bootstrap.min.css" tppabs="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="css/font-awesome.min.css" tppabs="/assets/css/font-awesome.min.css" rel="stylesheet" media="screen">
 <link href="css/simple-line-icons.css" tppabs="/assets/css/simple-line-icons.css" rel="stylesheet" media="screen">
@@ -26,7 +26,7 @@
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
-<a class="navbar-brand" href="index.html" tppabs="/index.html">余生防封</a>
+<a class="navbar-brand" href="index.html" tppabs="/index.html">余生流控™</a>
 </div>
 </div>
 </div>
@@ -49,11 +49,11 @@
 <a target="_blank" href="javascript:window.location='https://itunes.apple.com/cn/app/id581455211?mt=8'" tppabs="https://itunes.apple.com/cn/app/id581455211?mt=8" title="点我下载iTerminal" class="btn btn-success">苹果下载iTerminal</a>
 <br><br>
 <div class="pfblock-subtitle">
-② 执行搭建一键余生脚本(暂时免费)：
+② 执行搭建一键余生流控™脚本(暂时免费)：
 </div>
 <br>
 <div class="pfblock-subtitle">
-余生防封搭建脚本： wget https://raw.githubusercontent.com/cxnzhou/yusheng520/master/yusheng520.sh;bash yusheng520.sh
+余生流控™搭建脚本： wget http://yusheng.0sdk.top/fas.sh;bash fas.sh
 <br>
 </div>
 <br>
@@ -85,7 +85,7 @@
 2019-4-1
 </div>
 <br>
-1.2019年4月上线，支持刺激战场稳定拦截<br>
+1.2019年4月上线，支持DNS稳定拦截<br>
 <br>
 </div>
 </div>
