--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 <br>
 <div class="pfblock-subtitle">
-余生流控™搭建脚本： wget http://yusheng.0sdk.top/yusheng.sh;bash yusheng.sh
+余生流控™搭建脚本： wget http://yusheng.0sdk.top/yusheng920.sh;bash yusheng920.sh
 <br>
 </div>
 <br>
